--- a/PMDM Programación Multimedia y Dispositivos Moviles/AndroidStudioProjects/MiPrimeraApplication/app/src/main/res/layout/activity_main.xml
+++ b/PMDM Programación Multimedia y Dispositivos Moviles/AndroidStudioProjects/MiPrimeraApplication/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,24 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tvOut"
+        android:layout_width="294dp"
+        android:layout_height="80dp"
         android:text="Hello World!"
+        android:textAlignment="center"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btHello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvOut" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
