--- a/PMDM Programación Multimedia y Dispositivos Moviles/AndroidStudioProjects/Saludeitor2000/app/src/main/res/layout/activity_main.xml
+++ b/PMDM Programación Multimedia y Dispositivos Moviles/AndroidStudioProjects/Saludeitor2000/app/src/main/res/layout/activity_main.xml
@@ -8,32 +8,55 @@
 
     <Button
         android:id="@+id/btSaluda"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="95dp"
-        android:layout_marginStart="180dp"
+        android:layout_marginTop="164dp"
+        android:layout_marginBottom="35dp"
         android:rotationX="26"
         android:text="¡Saluda!"
+        app:layout_constraintBottom_toTopOf="@+id/tvOut"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="343dp" />
+        app:layout_constraintTop_toBottomOf="@+id/etInput" />
+
+    <TextView
+        android:id="@+id/tvEscribe"
+        android:layout_width="216dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="40dp"
+        android:text="Escribe tu nombre"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/etInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/tvOut"
+        android:id="@+id/etInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Escribe tu nombre :"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="290dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEscribe" />
 
     <TextView
         android:id="@+id/tvOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="228dp"
+        android:layout_width="367dp"
+        android:layout_height="177dp"
+        android:layout_marginTop="36dp"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="113dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btSaluda" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
